Ticket #28593: Added TableConfigurationProvider that creates a select column which uses a TreeSelectionModel.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -141,6 +141,7 @@ class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_N
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = Die Eigenschaft {1} ist auf {0} nicht definiert. Verfügbare Eigenschaften sind: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Das Öffnen des Fensters schlug fehl.
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE.tooltip = Das Template "{0}" konnte nicht expandiert werden.
+class.com.top_logic.mig.html.layout.I18NConstants.DUPLICATE_CHANNEL_NAME__NAME = Es gibt bereits einen Kanal mit dem Namen {0}.
 class.com.top_logic.mig.html.layout.I18NConstants.OUTER_REFERENCES_DELETION_ERROR__LAYOUTS = Komponente kann nicht gelöscht werden, da äußere Komponenten auf sie verweisen: {0}
 class.com.top_logic.mig.html.layout.I18NConstants.STORE_FOR_MODEL = Möchten Sie das Formular als Standardformular für diesen Typ festlegen? <p> Hinweis: Das Standardformular für einen Typ wird als Annotation am Typ gespeichert, nicht in der anzeigenden Komponente. Die Aktualisierung des Standardformulars eines Typs aktualisiert alle Formulare, die diesen Typ anzeigen und kein spezielles Formular definieren. </p>
 class.com.top_logic.model.I18NConstants.DUPLICATE_ATTRIBUTE__NAME_CLASS = Das Attribut mit dem Namen "{0}" existiert bereits im Typ "{1}".
@@ -2448,6 +2449,12 @@ com.top_logic.layout.buttonbar.Icons.BUTTON_BAR_TEMPLATE = Vorlage für das Rende
 com.top_logic.layout.buttonbar.Icons.SLIDER_IMG = Bild, das angezeigt wird, wenn es sich bei dem Befehl um einen lang laufenden Befehl handelt.
 com.top_logic.layout.channel.BidirectionalTransformLinking = Bidirektionale Verknüpfung von Transformationen
 com.top_logic.layout.channel.BidirectionalTransformLinking.tooltip = Verknüpfung zur Erstellung eines bidirektionalen Transformationskanals. Verwendung einer inversen Transformation zur Bestimmung des Wertes für den Quellkanal.
+com.top_logic.layout.channel.DefaultChannelFactory = Standard-Kanal
+com.top_logic.layout.channel.DefaultChannelFactory.tooltip = Kanal, der ein einzelnes Objekt als Wert enthält.
+com.top_logic.layout.channel.ListChannelFactory = Listenwertiger Kanal
+com.top_logic.layout.channel.ListChannelFactory.tooltip = Kanal, der eine Liste von Objekten als Wert enthält.
+com.top_logic.layout.channel.SetChannelFactory = Mengenwertiger Kanal
+com.top_logic.layout.channel.SetChannelFactory.tooltip = Kanal, der eine Menge von Objekten als Wert enthält.
 com.top_logic.layout.channel.linking.Channel.component-ref = Komponenten-Referenz
 com.top_logic.layout.channel.linking.Channel.component-ref.tooltip = Angabe der Komponente, von der aus auf den angegebenen <i>Namen</i> zugegriffen werden soll.
 com.top_logic.layout.channel.linking.Channel.name = Name
@@ -4416,6 +4423,8 @@ com.top_logic.layout.scripting.recorder.ref.ExternalDataValue.url.tooltip = Die 
 com.top_logic.layout.scripting.recorder.ref.FileManagerDataValue = Datei-Manager-Datenwert
 com.top_logic.layout.scripting.recorder.ref.FileManagerDataValue.name.tooltip = Der Pfad zur <i>Datei</i>. <p> Wurde mit dem <i>Dateimanager</i> gelöst, nachdem der <i>Alias-Manager</i> Aliase ersetzt hatte. </p>
 com.top_logic.layout.scripting.recorder.ref.FileManagerDataValue.tooltip = <i>Datenelementwert</i>, der den <i>Dateimanager</i> verwendet, um die angeforderte <i>Datei</i> zu finden.
+com.top_logic.layout.scripting.recorder.ref.GenericModelOwner$MultipleAnnotatedModels = Mehrere annotierte Modelle
+com.top_logic.layout.scripting.recorder.ref.GenericModelOwner$MultipleAnnotatedModels.tooltip = Algorithmus zum Abrufen eines Modells mit einem bestimmten Namen aus einem <i>typisierten annotatable</i>. <p> Dieser Algorithmus kann verwendet werden, um einen <i>generischen Modelleigentümer</i> zu erstellen, wenn das Modell an ein beschreibbares <i>typisiertes annotatable</i> angehängt werden kann. </p>
 com.top_logic.layout.scripting.recorder.ref.GenericModelOwnerNaming.GenericModelName.algorithm = Algorithmus
 com.top_logic.layout.scripting.recorder.ref.GenericModelOwnerNaming.GenericModelName.algorithm-name = Name des Algorithmus
 com.top_logic.layout.scripting.recorder.ref.GenericModelOwnerNaming.GenericModelName.algorithm-name.tooltip = ResKey, angehängt an den Algorithmus von <i>Algorithmus</i>. Wird in der Regel durch den <i>Ressourcenschlüssel der Klasse</i> bereitgestellt, d.h. der vollqualifizierte Klassenname des Algorithmus wird für die Übersetzung verwendet.
@@ -5999,6 +6008,10 @@ com.top_logic.layout.table.model.TableExportProvider = Tabellen Export
 com.top_logic.layout.table.model.TableExportProvider.Config.export = Export
 com.top_logic.layout.table.model.TableExportProvider.Config.export.tooltip = Exportkonfiguration, die den hinzuzufügenden Tabellenexport beschreibt.
 com.top_logic.layout.table.model.TableExportProvider.tooltip = Konfigurierbares <i>Tabellenkonfigurations-Plugin</i>, das einen <i>Tabellendatenexport</i> zu einer <i>Tabellenkonfiguration</i> hinzufügt.
+com.top_logic.layout.table.model.TreeSelectColumnProvider = Baumauswahl Spalte
+com.top_logic.layout.table.model.TreeSelectColumnProvider.Config.channel = Kanal
+com.top_logic.layout.table.model.TreeSelectColumnProvider.Config.channel.tooltip = Der <i>Kanal der Komponente</i>, für die der Wert für das Auswahlmodell ermittelt werden soll. <p> Es wird erwartet, dass der Kanal als Wert eine Menge von Pfaden von Objekten enthält, angefangen vom Wurzelknoten bis zum tatsächlich ausgewählten Knoten. </p>
+com.top_logic.layout.table.model.TreeSelectColumnProvider.tooltip = Das <i>Plug-in für die Tabellenkonfiguration</i> fügt eine Spalte hinzu, die die Auswahl eines Baumauswahlmodells anzeigt.
 com.top_logic.layout.table.model.WithColumnCssClasses.cssClass = CSS-Klasse
 com.top_logic.layout.table.model.WithColumnCssClasses.cssClass.tooltip = Statische CSS-Klasse zur Anwendung auf alle Inhaltszellen einer Spalte. <p> Es gibt eine Reihe von vordefinierten CSS-Klassen für die Hervorhebung: </p> <ul> <li><code>tl-info</code></li> <li><code>tl-success</code></li> <li><code>tl-warning</code></li> <li><code>tl-danger</code></li> <li><code>tl-debug</code></li> <li><code>tl-accent-1</code></li> <li><code>tl-accent-2</code></li> <li><code>tl-accent-3</code></li> </ul> <p> Alle diese Klassen können mit der Klasse <code>tl-lighter</code> kombiniert werden, um die Hervorhebung zu verringern. </p>
 com.top_logic.layout.table.model.WithColumnCssClasses.cssClassGroupFirst = CSS-Klasse am Gruppenstart
@@ -6145,6 +6158,12 @@ com.top_logic.layout.table.tree.TreeTableContextMenuProvider = Anbieter des Kont
 com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Wählbarer Kontextmenü-Anbieter</i>, der das <i>Baumtabellen-Kontextmenü werkseitig</i> auswählt.
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll = Baumtabelle aufklappen alle einklappen
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll.tooltip = Erweitert alle Knoten in der <i>Baumtabellenkomponente</i>.
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name = {foreach(path, " > ")}
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name.tooltip = <i>Modellname</i> für die <i>Bezeichnung der Knoten in der Baumtabelle</i>.
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component = Komponente
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component.tooltip = Verweis auf die Baumtabelle.
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.path = Pfad
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.path.tooltip = Pfad der Bezeichnungen von der Wurzel bis zum referenzierten Knoten.
 com.top_logic.layout.table.tree.UpdateTreeTableCommandHandler = Update-Baumtabelle-Kommando-Handler
 com.top_logic.layout.table.tree.UpdateTreeTableCommandHandler.tooltip = Ein <i>Befehlshandler</i>, der seine <i>Baumtabellenkomponente</i> aktualisiert.
 com.top_logic.layout.table.tree.compare.AbstractCompareModeCommand = Befehl Vergleichsmodus
@@ -6679,6 +6698,15 @@ com.top_logic.mig.html.layout.SingleLayoutContainer.Config.component.tooltip = K
 com.top_logic.mig.html.layout.SingleLayoutContainer.tooltip = <i>Layout-Container</i>, der maximal ein Kind aufnimmt.
 com.top_logic.mig.html.layout.SubComponentConfig.components = Komponenten
 com.top_logic.mig.html.layout.SubComponentConfig.components.tooltip = Konfigurationen von Unterkomponenten.
+com.top_logic.mig.html.layout.WithChannelConfigs$ChannelConfig = Kanal-Konfiguration
+com.top_logic.mig.html.layout.WithChannelConfigs$ChannelConfig.tooltip = Konfiguration eines In-App-Kanals.
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.impl = Umsetzung
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.impl.tooltip = Die Kanalimplementierung, die mit dem angegebenen Namen erstellt wird.
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.name.tooltip = Der Name des von der <i>Implementierung</i> erstellten Kanals.
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.value = Wert
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.value.tooltip = Der Anfangswert für den neuen Kanal.
+com.top_logic.mig.html.layout.WithChannelConfigs.additional-channels = Zusätzliche Kanäle
+com.top_logic.mig.html.layout.WithChannelConfigs.additional-channels.tooltip = Konfiguration für zusätzliche Kanäle. <p> Die Werte sind Paare aus <i>Typnamen</i> und <i>Namen von Komponenten</i>. Wenn ein Objekt des Typs (oder einer Spezialisierung) angezeigt wird, wird standardmäßig die konfigurierte Zielkomponente als Sprungziel verwendet. </p>
 com.top_logic.mig.html.layout.WithDefaultFor.defaultFor = Standardsicht für
 com.top_logic.mig.html.layout.WithDefaultFor.defaultFor.tooltip = Für die konfigurierten Typen ist diese Komponente die Standardansicht. <p> Die Standardansicht für einen Typ wird geöffnet, wenn ein Objekt dieses Typs über einen Link geöffnet wird. </p>
 com.top_logic.mig.html.layout.WithGotoConfiguration$GotoTarget = Gehe zu Ziel
