Ticket #28676: Version upgrade and instantiation of whitelist variable.

--- a/com.top_logic.kafka/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.kafka/src/main/java/META-INF/messages_de.properties
@@ -120,16 +120,16 @@ com.top_logic.kafka.services.common.CommonClientConfig.sasl.login.refresh.window
 com.top_logic.kafka.services.common.CommonClientConfig.sasl.login.retry.backoff.max.ms = Sasl-Login-Wiederholungsversuch Backoff Maximum ms
 com.top_logic.kafka.services.common.CommonClientConfig.sasl.login.retry.backoff.ms = Sasl-Anmeldewiederholungsversuch Backoff ms
 com.top_logic.kafka.services.common.CommonClientConfig.sasl.mechanism = SASL Mechanismus
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.clock.skew.seconds = Sasl oauthbearer Uhr schiefe Sekunden
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.expected.audience = Sasl oauthbearer erwartet Publikum
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.expected.issuer = Sasl oauthbearer erwartet Emittent
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.refresh.ms = Sasl oauthbearer jwks endpoint refresh ms
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.retry.backoff.max.ms = Sasl oauthbearer jwks endpoint retry backoff maximum ms
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.retry.backoff.ms = Sasl oauthbearer jwks endpoint retry backoff ms
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.url = Sasl oauthbearer jwks endpoint URL
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.scope.claim.name = Sasl oauthbearer scope claim name
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.sub.claim.name = Sasl oauthearer sub claim name
-com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.token.endpoint.url = URL des Endpunkts für die Sperre des Sasl-Outhearer-Tokens
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.clock.skew.seconds = Zeitabweichung in Sekunden zwischen Kafka-Client und OAuth2-Server
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.expected.audience = Erwartete Zielgruppe (audience) im OAuth2-JWT
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.expected.issuer = Erwarteter Aussteller (issuer) des OAuth2-JWT
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.refresh.ms = Intervall zur Aktualisierung des JWKS-Caches (in Millisekunden)
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.retry.backoff.max.ms = Maximale Wartezeit zwischen JWKS-Abrufversuchen (in Millisekunden)
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.retry.backoff.ms = Initiale Wartezeit zwischen JWKS-Abrufversuchen (in Millisekunden)
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.jwks.endpoint.url = URL des JWKS-Endpunkts des OAuth2-Servers
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.scope.claim.name = Name des Claim-Felds für den Scope im OAuth2-JWT
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.sub.claim.name = Name des Claim-Felds für den Benutzer (Subject) im OAuth2-JWT
+com.top_logic.kafka.services.common.CommonClientConfig.sasl.oauthbearer.token.endpoint.url = URL des Endpunkts für das Abrufen des OAuth-Tokens
 com.top_logic.kafka.services.common.CommonClientConfig.security.protocol = Sicherheitsprotokoll
 com.top_logic.kafka.services.common.CommonClientConfig.security.providers = Sicherheitsanbieter
 com.top_logic.kafka.services.common.CommonClientConfig.security.providers.tooltip = Die Kafka Einstellung: "security.providers"
