Ticket #28676: Added messages to the new variable.

--- a/com.top_logic.kafka/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.kafka/src/main/java/META-INF/messages_de.properties
@@ -97,6 +97,8 @@ com.top_logic.kafka.services.common.CommonClientConfig.metric.reporters = Metrik
 com.top_logic.kafka.services.common.CommonClientConfig.metrics.num.samples = Anzahl Metrik-Stichproben
 com.top_logic.kafka.services.common.CommonClientConfig.metrics.recording.level = Aufzeichnungsebene der Metriken
 com.top_logic.kafka.services.common.CommonClientConfig.metrics.sample.window.ms = Metrik-Abtastfenster in ms
+com.top_logic.kafka.services.common.CommonClientConfig.org.apache.kafka.sasl.oauthbearer.allowed.urls = Whitelist der erlaubten Urls
+com.top_logic.kafka.services.common.CommonClientConfig.org.apache.kafka.sasl.oauthbearer.allowed.urls.tooltip = Gibt die erlaubten URLs zurück, die so genannte Whitelist. Trennen Sie diese mit normalen Kommas und ohne Zeilenumbruch.
 com.top_logic.kafka.services.common.CommonClientConfig.receive.buffer.bytes = Empfangs-Puffer-Bytes
 com.top_logic.kafka.services.common.CommonClientConfig.reconnect.backoff.max.ms = Maximaler Wiederverbindungs-Backoff in ms
 com.top_logic.kafka.services.common.CommonClientConfig.reconnect.backoff.ms = Wiederverbindungs-Backoff in ms
