--- a/com.top_logic.kafka/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.kafka/src/main/java/META-INF/messages_en.properties
@@ -97,6 +97,8 @@ com.top_logic.kafka.services.common.CommonClientConfig.metric.reporters = Metric
 com.top_logic.kafka.services.common.CommonClientConfig.metrics.num.samples = Metrics number samples
 com.top_logic.kafka.services.common.CommonClientConfig.metrics.recording.level = Metrics recording level
 com.top_logic.kafka.services.common.CommonClientConfig.metrics.sample.window.ms = Metrics sample window ms
+com.top_logic.kafka.services.common.CommonClientConfig.org.apache.kafka.sasl.oauthbearer.allowed.urls = Whitelist of allowed urls
+com.top_logic.kafka.services.common.CommonClientConfig.org.apache.kafka.sasl.oauthbearer.allowed.urls.tooltip = Returns the permitted URLs, the so-called whitelist. Separate these with normal commas and without line breaks.
 com.top_logic.kafka.services.common.CommonClientConfig.receive.buffer.bytes = Receive buffer bytes
 com.top_logic.kafka.services.common.CommonClientConfig.reconnect.backoff.max.ms = Reconnect backoff maximum ms
 com.top_logic.kafka.services.common.CommonClientConfig.reconnect.backoff.ms = Reconnect backoff ms
