Ticket #28678: Moved alter column processor to tl-core.
This processor is independent of the model implementation in tl-element
and required for all tl-core derivatives.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -1388,6 +1388,20 @@ com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.exclude = au
 com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.exclude.tooltip = Schließen Sie das Attribut von der Serialisierung aus.
 com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.include = einbeziehen
 com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.include.tooltip = Nehmen Sie das Attribut in die Serialisierung auf.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor = Spaltenprozessor ändern
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.column = Säule
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.column.tooltip = Der alte Name der Spalte. <p> Der erwartete Name ist der logische Name der Spalte, wie er im <em>TopLogic-Meta-Schema</em> definiert ist. Wenn in der <i>Tabelle</i> keine Spalte mit dem angegebenen Namen definiert ist, werden die Flex-Daten für die entsprechende Tabelle migriert. </p>
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-db-name = Neuer Datenbankname
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-db-name.tooltip = Der neue konkrete Name der in der Datenbank verwendeten Spalte.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-mandatory = Neue Pflicht
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-mandatory.tooltip = Der neue obligatorische Modus.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-name = Neuer Name
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-name.tooltip = Der neue logische Name der Spalte.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-type = Neuer Typ
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-type.tooltip = Der neue Spaltentyp.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.table = Tabelle
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.table.tooltip = Logischer Name der Tabelle, von der kopiert werden soll. <p> Der erwartete Name ist der logische Name der Tabelle, wie er im <em>TopLogic-Meta-Schema</em> definiert ist. </p>
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.tooltip = <i>Migrationsprozessor</i>, der eine Tabellenspalte umbenennt oder ihre Eigenschaften aktualisiert.
 com.top_logic.knowledge.service.db2.migration.FuzzyTableNameMapping = Unscharfe Zuordnung von Tabellennamen
 com.top_logic.knowledge.service.db2.migration.FuzzyTableNameMapping$Config$Rename = umbenennen
 com.top_logic.knowledge.service.db2.migration.FuzzyTableNameMapping$Config$Rename.tooltip = Konfiguration einer Umbenennung, die durch das <i>Fuzzy-Tabellennamen-Mapping</i> angewendet wird. <p> Eine <i>Umbenennung</i> definiert einen zusätzlichen Namen, um ein <i>Meta-Objekt</i> zu finden. </p>
