--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -1388,6 +1388,20 @@ com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.exclude = Ex
 com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.exclude.tooltip = Exclude the attribute from the serialization.
 com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.include = Include
 com.top_logic.knowledge.service.db2.SerializingTransformer.Strategy.include.tooltip = Include the attribute in the serialization.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor = Alter column processor
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.column = Column
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.column.tooltip = The old name of the column. <p> The name expected is the logical name of the column as defined in the <em>TopLogic</em> meta schema. If the <i>Table</i> does not define a column of the given name, the flex-data for the corresponding table is migrated. </p>
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-db-name = New database name
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-db-name.tooltip = The new concrete name of the column used in the database.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-mandatory = New mandatory
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-mandatory.tooltip = The new mandatory mode.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-name = New name
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-name.tooltip = The new logical name of the column.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-type = New type
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.new-type.tooltip = The new column type.
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.table = Table
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.Config.table.tooltip = Logical name of the table to copy from. <p> The name expected is the logical name of the table as defined in the <em>TopLogic</em> meta schema. </p>
+com.top_logic.knowledge.service.db2.migration.AlterColumnProcessor.tooltip = <i>Migration processor</i> renaming a table column or updating its properties.
 com.top_logic.knowledge.service.db2.migration.FuzzyTableNameMapping = Fuzzy table name mapping
 com.top_logic.knowledge.service.db2.migration.FuzzyTableNameMapping$Config$Rename = Rename
 com.top_logic.knowledge.service.db2.migration.FuzzyTableNameMapping$Config$Rename.tooltip = Configuration of a renaming applied by the <i>fuzzy table name mapping</i>. <p> A <i>rename</i> defines an additional name to find a <i>meta object</i>. </p>
