--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -90,6 +90,7 @@ class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD 
 class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION = Persönliche Konfiguration gespeichert.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Benutzerkonten aktualisiert.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = Das Objekt {0} ist keine Gruppe.
+class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Die Ausführbarkeit des Befehls "{0}" in der Komponente "{1}" konnte nicht aktualisiert werden: {2}
 class.com.top_logic.layout.component.I18NConstants.DELETED_OBJECT__OBJ = Objekt gelöscht: {0}
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = Die Sicht wurde neu erstellt. Um die Sicht zu entfernen, verwenden Sie "Sicht löschen".
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = Die Sicht wurde nicht lokal verändert.
