--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -90,6 +90,7 @@ class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD 
 class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION = Stored personal configuration.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Updated account list.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
+class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Failed to update command executability of command "{0}" in component "{1}": {2}
 class.com.top_logic.layout.component.I18NConstants.DELETED_OBJECT__OBJ = Deleted object: {0}
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = The view was newly created. To remove the view use "delete view".
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = The view has not been locally modified.
