Ticket #24649: Cleanup: Better message of failing executability update.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -60,6 +60,7 @@ class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONT
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = Eines der Objekte {0} kann nicht gelöscht werden, weil es von den folgenden Objekten verwendet wird: {1}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Fehler: Es wird eine Definition für den Anwendungstyp "{1}" erwartet, aber es wurde eine Definition für "{0}" angegeben.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = Das Objekt {0} ist keine Gruppe.
+class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Die Ausführbarkeit des Befehls "{0}" in der Komponente "{1}" konnte nicht aktualisiert werden: {2}
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = Die Sicht wurde neu erstellt. Um die Sicht zu entfernen, verwenden Sie "Sicht löschen".
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = Die Sicht wurde nicht lokal verändert.
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = Keine solche Währung: {0}
