--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -60,6 +60,7 @@ class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONT
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = One of the objects {0} could not be deleted, because it is used by the following objects: {1}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Error: A definition for the application type "{1}" is expected, but a definition for "{0}" was given.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
+class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD_CMP_MSG = Failed to update command executability of command "{0}" in component "{1}": {2}
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = The view was newly created. To remove the view use "delete view".
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = The view has not been locally modified.
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = No such currency: {0}
