Ticket #25918: Added diagram node for receiving click events.

--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -18,8 +18,11 @@ com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-fact
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = Logik für das Kontextmenü des Diagrammelementes.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.tooltip = <i>Komponente</i>, die ein Flussdiagramm anzeigt.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder = Skript-Flussdiagramm-Erbauer
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.HandlerDefinition.name.tooltip = Eindeutiger Name des definierten Handlers. <p> Der definierte Handler steht dem Skript "Diagramm erstellen" als implizit definierte Variable mit diesem Namen zur Verfügung. Wenn Sie einen Handler mit dem Namen <code>onClick</code> definieren, steht dieser Handler dem Skript als Variable <code>$onClick</code> zur Verfügung. </p>
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart = Diagramm erstellen
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart.tooltip = Funktion zur Erstellung eines Flussdiagramms für ein bestimmtes Modell.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.handlers = Handler
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.handlers.tooltip = Spezifikation von Interaktionen mit dem Diagramminhalt. <p> Die hier definierten Handler können im Skript "Create Chart" an Diagrammelemente gebunden werden, indem sie als implizit definierte Variablen referenziert werden. </p>
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model = Unterstützt Modell
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model.tooltip = Prädikat, das entscheidet, ob ein gegebenes Modell als Flussdiagramm dargestellt werden kann.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Erbauer von Flussdiagrammen</i>, die mit TL-Script implementiert werden können.
