--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -18,8 +18,11 @@ com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-fact
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.Config.context-menu-factory.tooltip = The provider for the diagram elemnt's context menu.
 com.top_logic.graphic.flow.server.ui.FlowChartComponent.tooltip = <i>Component</i> displaying a flow chart.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder = Script flow chart builder
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.HandlerDefinition.name.tooltip = Unique name of the defined handler. <p> The defined handler is available to the create chart script as an implicitly defined variable with that name. When defining a handler with name <code>onClick</code>, this handler is available to the script as variable <code>$onClick</code>. </p>
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart = Create chart
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.create-chart.tooltip = Function creating a flow chart form a given model.
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.handlers = Handlers
+com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.handlers.tooltip = Specification of interactions with the diagram contents. <p> The handlers defined here can be bound to diagram elements in the create chart script by referencing them as implicitly defined variables. </p>
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model = Supports model
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model.tooltip = Predicate that decides, whether a given model can be displayed as flow chart.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Flow chart builder</i> that can be implemented by TL-Script.
