--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -82,6 +82,14 @@ com.top_logic.graphic.flow.data.ImageScale.MEET.tooltip = Skaliert die Grafik so
 com.top_logic.graphic.flow.data.ImageScale.SLICE = Slice
 com.top_logic.graphic.flow.data.ImageScale.SLICE.tooltip = Skaliert die Grafik so, dass: <ul> <li>Das Seitenverhältnis bleibt erhalten.</li> <li>Das gesamte Ansichtsfenster wird von der <code>viewBox</code> abgedeckt.</li> <li>Die <code>viewBox</code> wird so weit wie möglich verkleinert, wobei die anderen Kriterien weiterhin erfüllt werden.</li> </ul> <p> Wenn in diesem Fall das Seitenverhältnis der <code>viewBox</code> nicht mit dem Ansichtsfenster übereinstimmt, ragt ein Teil der <code>viewBox</code> über die Grenzen des Ansichtsfensters hinaus (d. h. der Bereich, in den die <code>viewBox</code> gezeichnet wird, ist größer als das Ansichtsfenster). slice </p>
 com.top_logic.graphic.flow.data.ImageScale.tooltip = Skalierungsanweisung für ein Bild innerhalb eines Rahmens.
+com.top_logic.graphic.flow.data.MouseButton = Maustaste
+com.top_logic.graphic.flow.data.MouseButton.LEFT = Links
+com.top_logic.graphic.flow.data.MouseButton.LEFT.tooltip = Die linke Maustaste.
+com.top_logic.graphic.flow.data.MouseButton.MIDDLE = Mitte
+com.top_logic.graphic.flow.data.MouseButton.MIDDLE.tooltip = Die mittlere Maustaste.
+com.top_logic.graphic.flow.data.MouseButton.RIGHT = Rechts
+com.top_logic.graphic.flow.data.MouseButton.RIGHT.tooltip = Die rechte Maustaste.
+com.top_logic.graphic.flow.data.MouseButton.tooltip = Maustasten, die zur Interaktion mit Diagrammelementen verwendet werden können
 com.top_logic.graphic.flow.data.SpaceDistribution = Raumverteilung
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = Keine
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Verwenden Sie keinen zusätzlichen Platz, sondern <i>richten Sie</i> die Zeile innerhalb ihres Containers aus.
@@ -98,6 +106,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Ausrichten
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN.tooltip = Geben Sie ein Literal für <i>align</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Grenze
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Schriftzeichen für <i>Rahmen</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET = Ziel anklicken
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET.tooltip = Geben Sie ein Literal für das <i>Klickziel</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Kompass-Layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Geben Sie ein Literal für das <i>Kompass-Layout</i> ein.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagramm
