--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -82,6 +82,14 @@ com.top_logic.graphic.flow.data.ImageScale.MEET.tooltip = Scales the graphic suc
 com.top_logic.graphic.flow.data.ImageScale.SLICE = Slice
 com.top_logic.graphic.flow.data.ImageScale.SLICE.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewport is covered by the <code>viewBox</code>.</li> <li>The <code>viewBox</code> is scaled down as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the <code>viewBox</code> does not match the viewport, some of the <code>viewBox</code> will extend beyond the bounds of the viewport (i.e., the area into which the <code>viewBox</code> will draw is larger than the viewport). slice </p>
 com.top_logic.graphic.flow.data.ImageScale.tooltip = Scaling instruction for an image within a box.
+com.top_logic.graphic.flow.data.MouseButton = Mouse button
+com.top_logic.graphic.flow.data.MouseButton.LEFT = Left
+com.top_logic.graphic.flow.data.MouseButton.LEFT.tooltip = The left mouse button.
+com.top_logic.graphic.flow.data.MouseButton.MIDDLE = Middle
+com.top_logic.graphic.flow.data.MouseButton.MIDDLE.tooltip = The middle mouse button.
+com.top_logic.graphic.flow.data.MouseButton.RIGHT = Right
+com.top_logic.graphic.flow.data.MouseButton.RIGHT.tooltip = The right mouse button.
+com.top_logic.graphic.flow.data.MouseButton.tooltip = Mouse buttons that can be used to interact with diagram elements
 com.top_logic.graphic.flow.data.SpaceDistribution = Space distribution
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = None
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Do not use extra space, allow to <i>align</i> the row within its container.
@@ -98,6 +106,8 @@ com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Align
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN.tooltip = Type literal for <i>align</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Border
 com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Type literal for <i>border</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET = Click target
+com.top_logic.graphic.flow.data.Widget.TypeKind.CLICK_TARGET.tooltip = Type literal for <i>click target</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT = Compass layout
 com.top_logic.graphic.flow.data.Widget.TypeKind.COMPASS_LAYOUT.tooltip = Type literal for <i>compass layout</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.DIAGRAM = Diagram
