--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_de.properties
@@ -26,3 +26,7 @@ com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.handlers.tool
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model = Unterstützt Modell
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model.tooltip = Prädikat, das entscheidet, ob ein gegebenes Modell als Flussdiagramm dargestellt werden kann.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Erbauer von Flussdiagrammen</i>, die mit TL-Script implementiert werden können.
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler = Skriptgesteuerter Klick-Handler
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.Config.script = Script
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.Config.script.tooltip = Funktion, die das <i>Ziel-Diagrammelement des Klicks</i> abruft. <p> Das Ergebnis der Funktion wird an konfigurierte UI-Aktionen übergeben. </p> <p> Wenn kein Skript bereitgestellt wird, wird das Benutzerobjekt des angeklickten Diagrammelements als Eingabe für weitere UI-Aktionen verwendet. </p>
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.tooltip = <i>Click-Handler</i>, der von TL-Script implementiert werden kann.
