--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -26,3 +26,7 @@ com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.handlers.tool
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model = Supports model
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.Config.supports-model.tooltip = Predicate that decides, whether a given model can be displayed as flow chart.
 com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Flow chart builder</i> that can be implemented by TL-Script.
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler = Scripted click handler
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.Config.script = Script
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.Config.script.tooltip = Function that retrieves the <i>click target</i> diagram element. <p> The function's result is passed to configured UI actions. </p> <p> If no script is provided, the user object of the clicked diagram element is used as input for further UI actions. </p>
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.tooltip = <i>Click handler</i> that can be implemented by TL-Script.
