Ticket #25918: Fixed JavaDoc.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -89,7 +89,7 @@ com.top_logic.graphic.flow.data.MouseButton.MIDDLE = Mitte
 com.top_logic.graphic.flow.data.MouseButton.MIDDLE.tooltip = Die mittlere Maustaste.
 com.top_logic.graphic.flow.data.MouseButton.RIGHT = Rechts
 com.top_logic.graphic.flow.data.MouseButton.RIGHT.tooltip = Die rechte Maustaste.
-com.top_logic.graphic.flow.data.MouseButton.tooltip = Maustasten, die zur Interaktion mit Diagrammelementen verwendet werden können
+com.top_logic.graphic.flow.data.MouseButton.tooltip = Maustasten, die zur Interaktion mit Diagrammelementen verwendet werden können.
 com.top_logic.graphic.flow.data.SpaceDistribution = Raumverteilung
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = Keine
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Verwenden Sie keinen zusätzlichen Platz, sondern <i>richten Sie</i> die Zeile innerhalb ihres Containers aus.
