--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -89,7 +89,7 @@ com.top_logic.graphic.flow.data.MouseButton.MIDDLE = Middle
 com.top_logic.graphic.flow.data.MouseButton.MIDDLE.tooltip = The middle mouse button.
 com.top_logic.graphic.flow.data.MouseButton.RIGHT = Right
 com.top_logic.graphic.flow.data.MouseButton.RIGHT.tooltip = The right mouse button.
-com.top_logic.graphic.flow.data.MouseButton.tooltip = Mouse buttons that can be used to interact with diagram elements
+com.top_logic.graphic.flow.data.MouseButton.tooltip = Mouse buttons that can be used to interact with diagram elements.
 com.top_logic.graphic.flow.data.SpaceDistribution = Space distribution
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = None
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Do not use extra space, allow to <i>align</i> the row within its container.
